--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -34,20 +34,22 @@ h6 {
 }
 
 h1 {
-  margin-top: 0;
-  font-size: $h-size-1;
+  margin-top: 60px;
+  font-size: 30px;
 }
 
 h2 {
-  font-size: $h-size-2;
+ margin-top: 40px;
+  font-size: 26px;
 }
 
 h3 {
-  font-size: $h-size-3;
+  margin-top: 30px;
+  font-size: 22px;
 }
 
 h4 {
-  font-size: $h-size-4;
+  font-size: $h-size-1;
 }
 
 h5 {
@@ -107,11 +109,11 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin: 2em 1em 2em 0;
+  margin: 1em 1em 1em 0;
   padding-left: 1em;
   padding-right: 1em;
   font-style: italic;
-  border-left: 0.25em solid $primary-color;
+  border-left: 0.2em solid $primary-color;
 
   cite {
     font-style: italic;
