design: logo 글씨 크기 변경

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -40,12 +40,12 @@ h1 {
 
 h2 {
  margin-top: 40px;
-  font-size: 26px;
+  font-size: 25px;
 }
 
 h3 {
   margin-top: 30px;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 h4 {
@@ -109,7 +109,7 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin: 1em 1em 1em 0;
+  margin-left: 1em;
   padding-left: 1em;
   padding-right: 1em;
   font-style: italic;
