design: home 화면 게시글 화면 가로 비율 분리

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -10,6 +10,23 @@
   padding-right: 1em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
+  max-width: 100%;
+  -webkit-animation-delay: 0.15s;
+  animation-delay: 0.15s;
+
+  @include breakpoint($x-large) {
+    max-width: $max-width;
+  }
+}
+
+#main-post {
+  @include clearfix;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  -webkit-animation: $intro-transition;
+  animation: $intro-transition;
   max-width: $my-width;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
