--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -8,18 +8,18 @@ html {
   /* apply a natural box layout model to all elements */
   box-sizing: border-box;
   background-color: $background-color;
-  font-size: 16px;
+  font-size: $type-size-5;
 
   @include breakpoint($medium) {
-    font-size: 16px;
+    font-size: $type-size-5;
   }
 
   @include breakpoint($large) {
-    font-size: 16px;
+    font-size: $type-size-5;
   }
 
   @include breakpoint($x-large) {
-    font-size: 16px;
+    font-size: $type-size-5;
   }
 
   -webkit-text-size-adjust: 100%;
